--- a/client/views/queue/ticketRow/ticketRow.html
+++ b/client/views/queue/ticketRow/ticketRow.html
@@ -10,7 +10,7 @@
   <td>{{authorName}}</td>
   <td>
     <div class="dropdown" data-ticket="{{_id}}">
-      <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" name="statusButton" aria-expanded="false">{{status}}<span class="caret"></span></button>
+      <button class="btn btn-default btn-xs dropdown-toggle" type="button" data-toggle="dropdown" name="statusButton" aria-expanded="false">{{status}}<span class="caret"></span></button>
       <ul class="dropdown-menu" name="statusMenu" role="menu" aria-labelledby="ticketStatusDropdown">
         <li role="presentation"><a role="menuitem" tabindex="-1">Open</a></li>
         <li role="presentation"><a role="menuitem" tabindex="-1">Closed</a></li>
@@ -23,33 +23,38 @@
 <tr>
   <td colspan='5' class="hiddenRow">
     <div class="accordion-body collapse" id="row{{_id}}" name="{{_id}}">
-      <div class="panel panel-default">
-        <div class="panel-body">
-          <div class="assign-user-field">
-            <span class="icon glyphicon glyphicon-plus"></span>
-            <input type="text" name="assignUser" placeholder="Assign User" data-toggle="tooltip" data-trigger="manual" title="User not found.">
-          </div>
-          {{#each associatedUserIds}}
-          {{> userPortrait userId=this}}
-          {{/each}}
-        </div>
-      </div>
-      <div class="col-xs-12 col-md-6">
-        <form class="form-horizontal" name="ticketForm">
-          <div class="form-group">
-            <label for="body" class="control-label col-xs-4 col-md-2">Ticket Body:</label>
-            <div class="col-xs-8 col-md-10">
-              <div class="well well-sm" style="text-align: left;">{{body}}</div>
+      <div class="col-xs-12 col-md-12">
+          <blockquote>
+            {{body}}
+          </blockquote>
+
+          <div class="row">
+            <div class="col-xs-4 col-md-4">
+              <div class="assign-user-field">
+                <span class="icon glyphicon glyphicon-plus"></span>
+                <input type="text" name="assignUser" placeholder="Assign User" data-toggle="tooltip" data-trigger="manual" title="User not found.">
+              </div>
+              {{#each associatedUserIds}}
+              {{> userPortrait userId=this}}
+              {{/each}}
             </div>
-            {{#each tags}}
-            <a href="{{paramTag}}">{{this}}</a>
-            {{/each}}
+            <div class="col-xs-4 col-md-4">
+              {{#each tags}}
+              <a href="{{paramTag}}">{{this}}</a>
+              {{/each}}
+            </div>
+            <div class="col-xs-4 col-md-4">
+              Files?
+            </div>
           </div>
+
+          <hr/>
+
           {{#each notes}}
-          <div class="form-group">
+          <div class="row">
             <div class="col-xs-4 col-md-2">
               <label for="note-{{_id}}" class="control-label pull-right">
-                {{authorName}}:<br>
+                {{> userPortrait userId=authorId}}
                 <small style="font-size: 0.7em; font-weight: lighter;">{{>timeParser date=timestamp}}</small>
               </label>
             </div>
@@ -58,8 +63,9 @@
             </div>
           </div>
           {{/each}}
+
           <div class="form-group">
-            <div class="col-xs-8 col-xs-offset-4 col-md-10 col-md-offset-2">
+            <div class="col-xs-12 col-md-10 col-md-offset-2">
               <div class="input-group">
                 <div class="input-group-btn">
                   <button type="button" class="btn btn-default">@</button>
@@ -83,9 +89,9 @@
               </div>
             </div>
           </div>
-        </form>
       </div>
-      <div class="hidden-xs col-md-6">
+
+      <div class="hidden-xs col-md-12">
         {{#each attachmentIds}}
         <a href="/file/">{{this}}</a>
         {{/each}}
