--- a/client/views/modals/ticketModal/ticketModal.html
+++ b/client/views/modals/ticketModal/ticketModal.html
@@ -28,6 +28,12 @@
             </div>
           </div>
           <div class="form-group">
+            <label for="tags" class="control-label">Tags:</label>
+            <div>
+              <input type="text" name="tags" data-placeholder="Enter tags" style="width: 100%">
+            </div>
+          </div>
+          <div class="form-group">
             <label for="queueName" class="control-label">Queue(s):</label>
             <div>
               <select name="queue" data-placeholder="Select queue(s)" multiple="multiple" style="width: 100%">
