--- a/client/views/queue/ticketRow/ticketRow.html
+++ b/client/views/queue/ticketRow/ticketRow.html
@@ -66,7 +66,7 @@
           {{else}}
           <div class="row">
             <div class="col-xs-8 col-xs-offset-4 col-md-10 col-md-offset-2">
-              <small style="font-size: 0.7em;">{{message}} @ {{timestamp}}</small>
+              <small style="font-size: 0.7em;">User {{authorName}} {{message}} @ {{timestamp}}</small>
             </div>
           </div>
           {{/if}}
