Some refactoring and directory cleanup; a ticket flag for attachments.

--- a/client/views/queue/ticketRow/ticketRow.html
+++ b/client/views/queue/ticketRow/ticketRow.html
@@ -5,6 +5,9 @@
     {{#if repliedTo}}
     <span class="glyphicon glyphicon-comment"></span>
     {{/if}}
+    {{#if hasAttachment}}
+    <span class="glyphicon glyphicon-paperclip"></span>
+    {{/if}}
   </td>
   <td>{{title}}</td>
   <td>{{authorName}}</td>
