Meteor version bump. Mizzao autocomplete added and usernames autocomplete in fields where it makes sense. Still need sensible tagging.

--- a/client/views/modals/ticketModal/ticketModal.html
+++ b/client/views/modals/ticketModal/ticketModal.html
@@ -19,12 +19,12 @@
           </div>
           <div class="form-group">
             <label for="title" class="control-label">Title:</label>
-            <input class="form-control" name="title">
+            {{>inputAutocomplete settings=settings name="title" class="form-control" }}
           </div>
           <div class="form-group">
             <label for="body" class="control-label">Body:</label>
             <div>
-              <textarea class="form-control" rows="6" name="body"></textarea>
+              {{#textareaAutocomplete settings=settings name="body" class="form-control" rows="6"}}{{/textareaAutocomplete}}
             </div>
           </div>
           <div class="form-group">
