--- a/client/views/modals/ticketModal/ticketModal.html
+++ b/client/views/modals/ticketModal/ticketModal.html
@@ -46,6 +46,7 @@
         </form>
       </div>
       <div class="modal-footer">
+        <button type="button" class="btn btn-danger pull-left" data-dismiss="modal">Cancel</button>
         <button type="button" class="btn btn-primary pull-right" data-action="submit">Submit Ticket</button>
       </div>
     </div>
