Add a little message if a ticket in is in multiple queues.  Probably need to expand this to a widget that can edit which queues a ticket is in as well.

--- a/client/views/queue/ticketRow/ticketRow.html
+++ b/client/views/queue/ticketRow/ticketRow.html
@@ -30,6 +30,13 @@
         <blockquote>
           {{body}}
         </blockquote>
+
+        <div class="row">
+          {{#if multiqueues}}
+            This ticket is part of {{multiqueues}} queues.
+          {{/if}}
+        </div>
+
         <div class="row">
           <table class="table table-bordered">
             <thead>
