--- a/client/views/queue/ticketRow/ticketRow.html
+++ b/client/views/queue/ticketRow/ticketRow.html
@@ -54,12 +54,12 @@
                     <input type="text" name="assignUser" placeholder="Assign User" data-toggle="tooltip" data-trigger="manual" title="User not found.">
                   </div>
                   {{#each associatedUserIds}}
-                  {{> associatedUserPortrait userId=this}}
+                  {{> associatedUserPortrait}}
                   {{/each}}
                 </td>
                 <td>
                   {{#each tags}}
-                  <a href="{{paramTag}}">{{this}}</a>
+                    {{> tag }}
                   {{/each}}
                 </td>
                 <td>
