Add user portrait in collapsed row ticket view. Closes #12

--- a/client/views/queue/ticketRow/ticketRow.css
+++ b/client/views/queue/ticketRow/ticketRow.css
@@ -47,6 +47,11 @@
   color: #ddd;
 }
 
+.ticket-requester-portrait{
+  float: left;
+  padding-right: 5px;
+}
+
   /* ANIMATION EFFECTS */
 .assign-user-field input:focus, .assign-user-field input:active{
     outline:none;
