--- a/client/views/queue/queue.html
+++ b/client/views/queue/queue.html
@@ -6,7 +6,7 @@
     </div>
     <div class="pull-right">
       {{#each members}}
-      {{>userPortrait userId=this}}
+      {{>userPortrait userId=this class="user-image"}}
       {{/each}}
     </div>
   </div>
