--- a/client/views/queue/ticketRow/ticketRow.html
+++ b/client/views/queue/ticketRow/ticketRow.html
@@ -12,7 +12,7 @@
   <td>{{title}}</td>
   <td>
     <div class="ticket-requester-portrait">
-      {{>userPortrait userId=this.authorId class="requester-image"}}
+      {{>userPortrait userId=this.authorId class="requester"}}
     </div>
     {{authorName}}
   </td>
