right align was the wrong choice

--- a/client/views/queue/ticketRow/ticketRow.css
+++ b/client/views/queue/ticketRow/ticketRow.css
@@ -49,7 +49,7 @@
 
 .ticket-requester-portrait{
   float: left;
-  text-align: right;
+  text-align: center;
   padding-right: 5px;
   max-height: 24px;
   width: 40px;
