'Global' and 'my' ticket queues with facets. Some styling, refactoring, and bugfixes.

--- a/client/views/nav/queuebar/queuebar.html
+++ b/client/views/nav/queuebar/queuebar.html
@@ -12,6 +12,10 @@
       <li class="{{active}}"><a href="/queue/{{name}}">{{name}}</a></li>
       {{/each}}
     </ul>
+    <ul class="nav navbar-nav navbar-right">
+      <li class="{{globalClass}}"><a href="/all/tickets">Global</a></li>
+      <li class="{{userClass}}"><a href="/my/tickets">My Queue</a></li>
+    </ul>
   </div>
 
 </div>
