--- a/client/views/nav/navbar/navbar.css
+++ b/client/views/nav/navbar/navbar.css
@@ -1,9 +1,10 @@
+
 .navbar {
   position: static;
 }
 
-.navbar .nav > li {
-  z-index: 1001;
+.navbar .nav .dropdown > li {
+  z-index: 10001;
 }
 
 .navbar-default {
@@ -72,6 +73,3 @@
   margin-bottom: 0 !important;
 }
 
-.hiddenRow {
-  padding: 0 !important;
-}
