--- a/client/views/userDashboard/userDashboard.html
+++ b/client/views/userDashboard/userDashboard.html
@@ -4,7 +4,7 @@
     <label for="defaultQueue">Default Queue:</label>
     <select>
       {{#each queue}}
-      <option>{{this}}</option>
+      <option>{{name}}</option>
       {{/each}}
     </select>
   </div>
