Only allow tickets to be a member of a single queue + a bugfix.

--- a/client/views/modals/ticketModal/ticketModal.html
+++ b/client/views/modals/ticketModal/ticketModal.html
@@ -34,9 +34,9 @@
             </div>
           </div>
           <div class="form-group">
-            <label for="queueName" class="control-label">Queue(s):</label>
+            <label for="queueName" class="control-label">Queue:</label>
             <div>
-              <select name="queue" data-placeholder="Select queue(s)" multiple="multiple" style="width: 100%">
+              <select name="queue" data-placeholder="Select queue(s)" style="width: 100%">
                 {{#each queues}}
                 <option value="{{name}}">{{name}}</option>
                 {{/each}}
