Move new ticket button, add a border for the blockquote.

--- a/client/views/queue/ticketRow/ticketRow.html
+++ b/client/views/queue/ticketRow/ticketRow.html
@@ -64,7 +64,7 @@
                 <td>
                   {{#each attachmentIds}}
                   <img style="max-width: 64px; max-height:24px;" src="/file/{{file.thumbnail}}" />
-                  <a href="/file/{{file.filenameOnDisk}}">{{file.filename}}</a><br />
+                  <a data-action="downloadAttachment" href="/file/{{file.filenameOnDisk}}">{{file.filename}}</a><br />
                   {{/each}}
                 </td>
               </tr>
