--- a/client/views/queue/queue.html
+++ b/client/views/queue/queue.html
@@ -2,7 +2,7 @@
 <div class="col-xs-12 col-sm-10">
   <div class="row">
     <div class="pull-left">
-      <a role="button" href="/queue/{{queueName}}/dashboard" class="btn btn-sm btn-success">Manage This Queue</a>
+      <button class="btn btn-success" type="button" data-toggle="modal" data-target="#ticketModal">Add New Ticket</button>
     </div>
     <div class="pull-right">
       {{#each members}}
