--- a/client/views/queue/ticketRow/ticketRow.css
+++ b/client/views/queue/ticketRow/ticketRow.css
@@ -71,3 +71,10 @@
   padding-left: 20px;
   padding-right: 5px;
 }
+
+blockquote { 
+  background: #ffffff;
+  border-left: 2px solid #ccc;
+  border-bottom: 2px solid #ccc;
+  border-right: 2px solid #ccc;
+}
