--- a/client/views/modals/ticketModal/ticketModal.html
+++ b/client/views/modals/ticketModal/ticketModal.html
@@ -36,7 +36,7 @@
           <div class="form-group">
             <label for="queueName" class="control-label">Queue:</label>
             <div>
-              <select name="queue" data-placeholder="Select queue(s)" style="width: 100%">
+              <select name="queue" class="form-control" data-placeholder="Select queue">
                 {{#each queues}}
                 <option value="{{name}}">{{name}}</option>
                 {{/each}}
