--- a/client/views/queue/ticketRow/ticketRow.css
+++ b/client/views/queue/ticketRow/ticketRow.css
@@ -74,7 +74,5 @@
 
 blockquote { 
   background: #ffffff;
-  border-left: 2px solid #ccc;
-  border-bottom: 2px solid #ccc;
-  border-right: 2px solid #ccc;
+  border: 2px solid #ccc;
 }
