Message for no tickets matching a search and an option to clear search.

--- a/client/views/queue/queue.html
+++ b/client/views/queue/queue.html
@@ -54,6 +54,13 @@
       </thead>
       <tbody>
         <tr></tr>
+        {{#if noTickets}}
+        {{#if search}}
+        No tickets match your current search. <a href='#' data-action='clearSearch'>Clear your search?</a>
+        {{else}}
+        No tickets found.
+        {{/if}}
+        {{/if}}
         {{#each tickets}}
         {{>ticketRow}}
         {{/each}}
