Set flag for other associated users when updating a ticket.

--- a/client/views/queue/ticketRow/ticketRow.html
+++ b/client/views/queue/ticketRow/ticketRow.html
@@ -8,6 +8,9 @@
     {{#if hasAttachment}}
     <span class="glyphicon glyphicon-paperclip"></span>
     {{/if}}
+    {{#if unread}}
+    <span class="glyphicon glyphicon-bell"></span>
+    {{/if}}
   </td>
   <td>{{title}}</td>
   <td>
