Bugfix - quick add ticket textbox clears properly on submit.

--- a/client/views/queue/queue.html
+++ b/client/views/queue/queue.html
@@ -15,7 +15,7 @@
   <hr>
   <div class="row top-buffer">
     <div class="col-sm-6">
-      <form class="form-horizontal">
+      <div class="form-horizontal">
         <div class="form-group">
           <label for="body" class="col-sm-1 control-label">Title:</label>
           <div class="col-sm-11">
@@ -34,8 +34,7 @@
           </div>
         </div>
         {{/if}}
-        <button type="button" class="btn btn-primary pull-right" data-action="addTicket">Submit</button>
-      </form>
+      </div>
     </div>
   </div>
   <hr>
