Publish counts for our filtered ticket set. Closes #10.

--- a/client/views/queue/queue.html
+++ b/client/views/queue/queue.html
@@ -40,6 +40,9 @@
   <hr>
   {{/if}}
   <div class="row">
+    <div>
+      Viewing {{clientCount}} of a possible {{getPublishedCount 'ticketCount'}} tickets.
+    </div>
     <table class="table table-striped table-condensed" style="border-collapse:collapse;">
       <thead>
         <tr>
