--- a/client/views/queue/queue.html
+++ b/client/views/queue/queue.html
@@ -43,12 +43,12 @@
     <table class="table table-striped table-condensed" style="border-collapse:collapse;">
       <thead>
         <tr>
-          <th>&nbsp;</th>
-          <th>Subject</th>
-          <th>Requester</th>
-          <th>Associated Users</th>
-          <th>Status</th>
-          <th>Submitted</th>
+          <th width='10%'>&nbsp;</th>
+          <th width='50%'>Subject</th>
+          <th width='10%'>Requester</th>
+          <th width='10%'>Associated Users</th>
+          <th width='10%'>Status</th>
+          <th width='10%'>Submitted</th>
         </tr>
       </thead>
       <tbody>
