--- a/client/views/queue/queue.html
+++ b/client/views/queue/queue.html
@@ -51,12 +51,12 @@
     <table class="table table-striped table-condensed" style="border-collapse:collapse;">
       <thead>
         <tr>
-          <th width='10%'>&nbsp;</th>
-          <th width='50%'>Subject</th>
-          <th width='10%'>Requester</th>
-          <th width='10%'>Associated Users</th>
-          <th width='10%'>Status</th>
-          <th width='10%'>Submitted</th>
+          <th class="col-md-1">&nbsp;</th>
+          <th class="col-md-4">Subject</th>
+          <th class="col-md-2">Requester</th>
+          <th class="col-md-2">Associated Users</th>
+          <th class="col-md-1">Status</th>
+          <th class="col-md-2">Submitted</th>
         </tr>
       </thead>
       <tbody>
