--- a/client/views/queue/ticketRow/tag.css
+++ b/client/views/queue/ticketRow/tag.css
@@ -7,7 +7,8 @@
   position: absolute; 
   display: block; 
   border: 1px solid; 
-  left: 50%; 
+  top: 17px;
+  left: 20%; 
   z-index: 9999; 
   width: 4.4em;
   background: rgba(255, 255, 255, 0.9); 
