--- a/client/views/queue/ticketRow/ticketRow.html
+++ b/client/views/queue/ticketRow/ticketRow.html
@@ -21,7 +21,7 @@
   </td>
   <td>
     {{#each associatedUserIds}}
-      {{>userPortrait userId=this associated=true class="in-row"}}
+    {{>userPortrait userId=this associated=true class="in-row"}}
     {{/each}}
   </td>
   <td>
@@ -39,96 +39,116 @@
 <tr>
   <td colspan='6' class="hiddenRow">
     <div class="accordion-body collapse" id="row{{_id}}" data-ticket="{{_id}}">
-      <div class="col-xs-12 col-md-12">
-        <blockquote>
-          {{body}}
-        </blockquote>
-
-        <div class="row">
-          <table class="table table-bordered">
-            <thead>
-              <tr>
-                <th width="33%">Assigned Users</th>
-                <th width="33%">Tags</th>
-                <th width="33%">Attachments</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>
-                  <div class="assign-user-field">
-                    <span class="icon glyphicon glyphicon-plus"></span>
-                    <input type="text" name="assignUser" placeholder="Assign User" data-toggle="tooltip" data-trigger="manual" title="User not found.">
-                  </div>
-                  {{#each associatedUserIds}}
-                  {{> userPortrait userId=this associated=true class="user-image"}}
-                  {{/each}}
-                </td>
-                <td>
-                  {{#each tags}}
-                    {{> tag }}
-                  {{/each}}
-                </td>
-                <td>
-                  {{#each attachmentIds}}
-                  <img style="max-width: 64px; max-height:24px;" src="/file/{{file.thumbnail}}" />
-                  <a data-action="downloadAttachment" href="/file/{{file.filenameOnDisk}}">{{file.filename}}</a><br />
-                  {{/each}}
-                </td>
-              </tr>
-            </tbody>
-          </table>
+      <div class="panel panel-default ticket-row-panel">
+        <div class="panel-heading clearfix">
+          <div class="col-md-3 col-xs-6">
+            <div class="col-xs-2">
+              {{>userPortrait userId=this.authorId class="user-image"}}
+            </div>
+            <div class="col-xs-9">
+              <strong>
+                {{author.displayName}}<br>
+                {{author.department}}<br>
+                {{author.physicalDeliveryOfficeName}}<br>
+              </strong>
+            </div>
+          </div>
+          <div class="col-md-3 col-md-offset-6 col-xs-6" style="text-align: right; float: right;">
+            <a href="/ticket/{{ticketNumber}}">#{{ticketNumber}}</a><br>
+            {{>timestampFormatter date=submittedTimestamp}}<br>
+            {{>timeParser date=submittedTimestamp}}
+          </div>
         </div>
+        <div class="panel-body ticket-row-panel-body">
+          <blockquote>
+            {{body}}
+          </blockquote>
+          <div class="row">
+            <table class="table table-bordered">
+              <thead>
+                <tr>
+                  <th width="33%">Assigned Users</th>
+                  <th width="33%">Tags</th>
+                  <th width="33%">Attachments</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>
+                    <div class="assign-user-field">
+                      <span class="icon glyphicon glyphicon-plus"></span>
+                      <input type="text" name="assignUser" placeholder="Assign User" data-toggle="tooltip" data-trigger="manual" title="User not found.">
+                    </div>
+                    {{#each associatedUserIds}}
+                    {{> userPortrait userId=this associated=true class="user-image"}}
+                    {{/each}}
+                  </td>
+                  <td>
+                    {{#each tags}}
+                    {{> tag }}
+                    {{/each}}
+                  </td>
+                  <td>
+                    {{#each attachmentIds}}
+                    <img style="max-width: 64px; max-height:24px;" src="/file/{{file.thumbnail}}" />
+                    <a data-action="downloadAttachment" href="/file/{{file.filenameOnDisk}}">{{file.filename}}</a><br />
+                    {{/each}}
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
 
-        {{#each changelog}}
+          {{#each changelog}}
           {{#if note}}
-            <div class="row">
-              <div class="col-xs-4 col-md-2">
-                <label for="note-{{_id}}" class="control-label pull-right">
-                  {{> userPortrait userId=authorId class="user-image"}}
-                  <small style="font-size: 0.7em; font-weight: lighter;">{{>timeParser date=timestamp}}</small>
-                </label>
-              </div>
-              <div class="col-xs-8 col-md-10">
-                <div class="well well-sm" style="text-align: left;">{{message}}</div>
-              </div>
+          <div class="row">
+            <div class="col-xs-4 col-md-2">
+              <label for="note-{{_id}}" class="control-label pull-right">
+                {{> userPortrait userId=authorId class="user-image"}}
+                <small style="font-size: 0.7em; font-weight: lighter;">{{>timeParser date=timestamp}}</small>
+              </label>
             </div>
+            <div class="col-xs-8 col-md-10">
+              <div class="well well-sm" style="text-align: left;">{{message}}</div>
+            </div>
+          </div>
           {{else}}
-            <div class="row">
-              <div class="col-xs-8 col-xs-offset-4 col-md-10 col-md-offset-2">
-                {{#if changeIsType 'attachment'}}
-                  {{#with otherId}}
-                    <img style="max-width: 100%; max-height: 128px" src="/file/{{file.filenameOnDisk}}"/><br/>
-                  {{/with}}
-                  <small style="font-size: 0.7em;">User {{authorName}} {{message}} @ {{timestamp}}</small>
-                {{else}}
-                  <small style="font-size: 0.7em;">User {{authorName}} {{message}} @ {{timestamp}}</small>
-                {{/if}}
-              </div>
+          <div class="row">
+            <div class="col-xs-8 col-xs-offset-4 col-md-10 col-md-offset-2">
+              {{#if changeIsType 'attachment'}}
+              {{#with otherId}}
+              <img style="max-width: 100%; max-height: 128px" src="/file/{{file.filenameOnDisk}}"/><br/>
+              {{/with}}
+              <small style="font-size: 0.7em;">User {{authorName}} {{message}} @ {{timestamp}}</small>
+              {{else}}
+              <small style="font-size: 0.7em;">User {{authorName}} {{message}} @ {{timestamp}}</small>
+              {{/if}}
             </div>
+          </div>
           {{/if}}
-        {{/each}}
+          {{/each}}
 
-        <div class="form-group">
-          <div class="col-xs-12 col-md-10 col-md-offset-2">
-            <div class="input-group">
-              {{> inputAutocomplete name="newNote" class="form-control" placeholder="Add a new note..." settings=settings }}
-              <div class="input-group-btn">
-                <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-expanded="False">Attach File <span class="caret"></span></button>
-                <ul class="dropdown-menu" role="menu">
-                  <li><a data-action="uploadFile">Upload File</a></li>
-                  <li><a href="#">Take Picture</a></li>
-                </ul>
+          <div class="form-group">
+            <div class="col-xs-12 col-md-10 col-md-offset-2">
+              <div class="input-group">
+                {{> inputAutocomplete name="newNote" class="form-control" placeholder="Add a new note..." settings=settings }}
+                <div class="input-group-btn">
+                  <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-expanded="False">Attach File <span class="caret"></span></button>
+                  <ul class="dropdown-menu" role="menu">
+                    <li><a data-action="uploadFile">Upload File</a></li>
+                    <li><a href="#">Take Picture</a></li>
+                  </ul>
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
 
-      <div class="hidden-xs col-md-12">
-        {{#each arrayify formFields}}
-        {{>tableFormGroup name=name value=value disabled="disabled"}}
-        {{/each}}
+        <div class="hidden-xs col-md-12">
+          {{#each arrayify formFields}}
+          {{>tableFormGroup name=name value=value disabled="disabled"}}
+          {{/each}}
+        </div>
       </div>
     </div>
   </td>
