Single ticket view. Only show 'Global' queue in queue bar if user has queue access.

--- a/client/views/nav/queuebar/queuebar.html
+++ b/client/views/nav/queuebar/queuebar.html
@@ -13,7 +13,9 @@
       {{/each}}
     </ul>
     <ul class="nav navbar-nav navbar-right">
+      {{#if queue}}
       <li class="{{globalClass}}"><a href="/all/tickets">Global</a></li>
+      {{/if}}
       <li class="{{userClass}}"><a href="/my/tickets">My Queue</a></li>
     </ul>
   </div>
