--- a/client/views/queue/ticketRow/ticketRow.html
+++ b/client/views/queue/ticketRow/ticketRow.html
@@ -41,23 +41,7 @@
     <div class="accordion-body collapse" id="row{{_id}}" data-ticket="{{_id}}">
       <div class="panel panel-default ticket-row-panel">
         <div class="panel-heading clearfix">
-          <div class="col-md-3 col-xs-6">
-            <div class="col-xs-2">
-              {{>userPortrait userId=this.authorId class="user-image"}}
-            </div>
-            <div class="col-xs-9">
-              <strong>
-                {{author.displayName}}<br>
-                {{author.department}}<br>
-                {{author.physicalDeliveryOfficeName}}<br>
-              </strong>
-            </div>
-          </div>
-          <div class="col-md-3 col-md-offset-6 col-xs-6" style="text-align: right; float: right;">
-            <a href="/ticket/{{ticketNumber}}">#{{ticketNumber}}</a><br>
-            {{>timestampFormatter date=submittedTimestamp}}<br>
-            {{>timeParser date=submittedTimestamp}}
-          </div>
+          {{> ticketHeading}}
         </div>
         <div class="panel-body ticket-row-panel-body">
 
@@ -65,13 +49,13 @@
             {{body}}
           </blockquote>
 
-          {{>infoTable}}
+          {{> ticketInfoTable}}
 
           {{#each changelog}}
-            {{>changelogItem}}
+            {{> ticketChangelogItem}}
           {{/each}}
 
-          {{>noteInput admin=true ticket=_id}}
+          {{> ticketNoteInput admin=true ticket=_id}}
 
         </div>
 
