Search help text with animations.

--- a/client/views/queue/sidebar/sidebar.html
+++ b/client/views/queue/sidebar/sidebar.html
@@ -1,14 +1,29 @@
 <template name="sidebar">
-<label for="textSearch" class="control-label">Search:</label>
-{{>inputAutocomplete name="textSearch" class="form-control" settings=settings}}
-<ul class="list-unstyled animated">
-  {{#each textFilter}}
-  <li class="fade"><a data-action="removeFilter" data-type="search" data-value="{{this}}"><span class="glyphicon glyphicon-remove"></span></a>search: {{this}}</li>
-  {{/each}}
-  {{#each userFilter}}
-  <li class="fade"><a data-action="removeFilter" data-type="user" data-value="{{this}}"><span class="glyphicon glyphicon-remove"></span></a>user: {{this}}</li>
-  {{/each}}
-</ul>
+<div id="searchLabel">
+  <label for="textSearch" class="control-label">Search:</label>  <a href="#" data-action="showHelp"><em>(help)</em></a>
+  {{#if helpText}}
+  <div class="help-text">
+    <small>
+      Use search to locate specific tickets by tag, text, users, or status. Examples:
+      <ul>
+        <li>@user</li>
+        <li>#tag</li>
+        <li>status:Closed</li>
+        <li>Printer</li>
+      </ul>
+    </small>
+  </div>
+  {{/if}}
+</div>
+  {{>inputAutocomplete name="textSearch" class="form-control" settings=settings}}
+  <ul class="list-unstyled">
+    {{#each textFilter}}
+    <li><a data-action="removeFilter" data-type="search" data-value="{{this}}"><span class="glyphicon glyphicon-remove"></span></a>search: {{this}}</li>
+    {{/each}}
+    {{#each userFilter}}
+    <li><a data-action="removeFilter" data-type="user" data-value="{{this}}"><span class="glyphicon glyphicon-remove"></span></a>user: {{this}}</li>
+    {{/each}}
+  </ul>
 <hr>
 <div class="panel panel-primary">
   <div class="panel-heading">
