--- a/client/views/queue/queue.html
+++ b/client/views/queue/queue.html
@@ -52,10 +52,10 @@
     <table name="ticketTable" class="table table-condensed" style="border-collapse:collapse;">
       <thead>
         <tr>
-          <th class="col-md-1">&nbsp;</th>
+          <th class="col-md-1 hidden-xs">&nbsp;</th>
           <th class="col-md-4">Subject</th>
           <th class="col-md-2">Requester</th>
-          <th class="col-md-2">Associated Users</th>
+          <th class="col-md-2 hidden-xs">Associated Users</th>
           <th class="col-md-1">Status</th>
           <th class="col-md-2">Submitted</th>
         </tr>
