Plus/minus icons in ticket row change properly.

--- a/client/views/queue/ticketRow/ticketRow.html
+++ b/client/views/queue/ticketRow/ticketRow.html
@@ -1,7 +1,7 @@
 <template name="ticketRow">
 <tr data-toggle="collapse" data-target="#row{{_id}}" class="accordion-toggle ticket-row" data-ticket="{{_id}}">
   <td class="hidden-xs">
-    <span class="glyphicon glyphicon-plus" name="{{_id}}"></span>
+    <span name="plusminus" class="glyphicon glyphicon-plus"></span>
     {{#if repliedTo}}
     <span class="glyphicon glyphicon-comment"></span>
     {{/if}}
