--- a/client/views/queue/queue.html
+++ b/client/views/queue/queue.html
@@ -79,9 +79,22 @@
       </tbody>
     </table>
   </div>
-  {{else}}
-  {{> loading}}
+  {{#if moreToLoad}}
+    {{#if loadingMore}}
+      {{> loading}}
+    {{else}}
+      <div class="load-more">
+        <a class="btn btn-default more-button" data-action="loadMore">
+          <span class="glyphicon glyphicon-refresh"></span> Load More
+        </a>
+      </div>
+    {{/if}}
   {{/if}}
+
+  {{else}}
+    {{> loading}}
+  {{/if}}
+
 </div>
 <div class="col-sm-2 hidden-xs">
   {{> sidebar data=tickets}}
