--- a/client/views/queue/sidebar/sidebar.html
+++ b/client/views/queue/sidebar/sidebar.html
@@ -28,7 +28,7 @@
 <div class="panel panel-primary">
   <div class="panel-heading">
     <h4 class="panel-title">
-      <a data-toggle="collapse" href='#statusCollapse'>Status</a>
+      <span name="statusCollapse" class="glyphicon glyphicon-chevron-down"></span> <a data-toggle="collapse" href='#statusCollapse'>Status</a>
     </h4>
   </div>
   <div id="statusCollapse" class="panel-collapse collapse in">
@@ -53,7 +53,7 @@
 <div class="panel panel-primary">
   <div class="panel-heading">
     <h4 class="panel-title">
-      <a data-toggle="collapse" href='#tagCollapse'>Tag</a>
+      <span name="tagCollapse" class="glyphicon glyphicon-chevron-down"></span> <a data-toggle="collapse" href='#tagCollapse'>Tag</a>
     </h4>
   </div>
   <div id="tagCollapse" class="panel-collapse collapse in">
