--- a/client/views/ticket/ticket.html
+++ b/client/views/ticket/ticket.html
@@ -1,4 +1,7 @@
 <template name="ticket">
+{{#unless ticket}}
+No ticket found.
+{{/unless}}
 {{#with ticket}}
 <div class="panel panel-default" data-ticketId="{{_id}}">
   <div class="panel-heading clearfix">
